--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title>Scribe of The Cursed</title>
+		<title>Scribe of The Rotten</title>
 
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home.css') }}">
 
