--- a/web_app/static/home.css
+++ b/web_app/static/home.css
@@ -1,72 +1,83 @@
-
-
-@font-face
-{
-	font-family: Augusta;
-	src: url("Augusta.ttf");
+@font-face {
+  font-family: Augusta;
+  src: url("Augusta.ttf");
 }
 
-
-#title
-{
-	transform: translate(6%, 18%);
-	font-size: 140px;
-	text-shadow: 2px 2px 2px rgb(180, 0, 0)
+#title {
+  transform: translate(6%, 18%);
+  font-size: 140px;
+  text-shadow: 2px 2px 2px rgb(180, 0, 0);
 }
 
-#subtitle
-{
-	transform: translate(20%, 280%);
-	font-size: 30px;
-
+#subtitle {
+  transform: translate(20%, 280%);
+  font-size: 30px;
 }
 
-.basetext
-{
-	color: rgb(153, 0, 0);
-	font-family: 'Augusta', bold;
-	position: absolute
+.basetext {
+  color: rgb(153, 0, 0);
+  font-family: "Augusta", bold;
+  position: absolute;
 }
 
-#bandfield
-{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-top: -30px;
-  	margin-left: -120px;
-	display: inline-block;
-	align-content: center;
+#bandfield {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -30px;
+  margin-left: -120px;
+  display: inline-block;
+  align-content: center;
 }
 
-body
-{
-	background-color: rgb(50, 0, 0);
-	padding: 30px;
+body {
+  background-color: rgb(50, 0, 0);
+  padding: 30px;
 }
 
-.redbox
-{
-	background-color: rgb(40, 0, 0);
-	color: rgb(200, 0, 0);
+.redbox {
+  background-color: rgb(40, 0, 0);
+  color: rgb(200, 0, 0);
 }
 
-@keyframes rotate
-{
-	from {transform: rotate(0deg);}
-	to {transform: rotate(360deg);}
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-
-#pent
-{
-	width: 500px;
-	position: absolute;
-	height: auto;
-	animation-name: rotate;
-	animation-duration: 9s;
-	animation-iteration-count: infinite;
-	animation-timing-function: linear;
-	z-index: -1;
+#pent {
+  width: 500px;
+  position: absolute;
+  height: auto;
+  animation-name: rotate;
+  animation-duration: 9s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  z-index: -1;
 }
 
+body {
+  background-color: black;
+  overflow: hidden;
+}
+
+@keyframes raining {
+  to {
+    margin-top: 1000px;
+  }
+}
+
+.raindrop {
+  margin-left: 5px;
+  margin-right: 5px;
+  position: absolute;
+  background: red;
+  animation-name: raining;
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
