--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Scribe of The Rotten</title>
+    <title>Dark Lyrics</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -20,9 +20,9 @@
   <body>
     <div class="background">
       <header>
-        <h1 class="basetext" id="title">Scribe Of The Rotten</h1>
+        <h1 class="basetext" id="title">Dark Lyrics</h1>
         <h3 class="basetext" id="subtitle">
-          His wisdom and spellbooks beholdeth
+          Most common words used by your favourite band
         </h3>
       </header>
 
@@ -39,14 +39,11 @@
             class="redbox"
             type="submit"
             name="submit"
-            value="Query the scribe"
+            value="Query"
           />
         </form>
       </main>
 
-      <div>
-        <img src="../static/pentagram.png" id="pent" />
-      </div>
 	</div>
 	<script type="text/javascript" src="{{ url_for('static', filename='rain.js') }}"></script>
   </body>
