Fixed problem with having to reload result page.
Name of the plot is the same as band and the name is retrieved from url parameters, and passed into render_template().

--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -46,7 +46,7 @@
 
       {% if invalid %}
 
-      <p id="invalid_text">Invalid band's name</p>
+      <p id="invalid_text">Invalid band's name.</p>
 
       {% endif %}
 
