--- a/web_app/templates/result.html
+++ b/web_app/templates/result.html
@@ -30,7 +30,7 @@
 
       <div>
       	<!-- <img src="{{url_for('static', filename='plot.png')}}" id="plot" onload="imageRefresh(this, 1000)"> -->
-      	<img src="{{url_for('static', filename='plot.png')}}" id="plot">
+      	<img src="{{url_for('static', filename=band_name + '.png')}}" id="plot">
 
       </div>
 
